--- a/css/todo.css
+++ b/css/todo.css
@@ -53,9 +53,9 @@ body {
 .header {
   width: 100%;
   height: 667px;
-  position: absolute;
+  position: fixed;
   left: 0;
-  top: .4rem;
+  top: 0;
   background: url(../img/762259.png);
   background-size: cover;
   z-index: 10;
@@ -123,7 +123,7 @@ body {
   position: relative;
   background: red;
   border-radius: 50%;
-  margin-top: 160px;
+  margin-top: 185px;
   margin-left: 242px;
 }
 
@@ -207,7 +207,7 @@ li.done .delete {
 .footer {
   position: fixed;
   left: 0;
-  top: 34px;
+  top: 0;
   width: 100%;
   height: 1rem;
   text-align: center;
@@ -230,19 +230,10 @@ li.done .delete {
   border-left: 0;
 }
 
-.ding {
-  width: 100%;
-  height: .4rem;
-  background: url(../img/ding.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 0 3px;
-}
-
 .yemian {
   width: 100%;
   height: 667px;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 10;
