--- a/css/todo.css
+++ b/css/todo.css
@@ -52,7 +52,7 @@ body {
 
 .header {
   width: 100%;
-  height: 667px;
+  height: 100%;
   position: fixed;
   left: 0;
   top: 0;
@@ -232,7 +232,7 @@ li.done .delete {
 
 .yemian {
   width: 100%;
-  height: 667px;
+  height: 100%;
   position: fixed;
   left: 0;
   top: 0;
