--- a/css/todo.scss
+++ b/css/todo.scss
@@ -37,7 +37,7 @@ $d-size:750px;
 //  width:0;
 //  height: 0;
     width: 100%;
-    height: 667px;
+    height: 100%;
     position: fixed;
     left: 0;
     top: 0;
@@ -236,7 +236,7 @@ li.done{
 //}
 .yemian{
     width: 100%;
-    height: 667px;
+    height:100%;
     position: fixed;
     left: 0;
     top:0;
